Implement operational flow updates and bounded benchmark pipeline